--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
         "no-unused-vars": 0,
         "import/order": 0,
         "consistent-return": 0,
-        "no-underscore-dangle": 0
+        "no-underscore-dangle": 0,
+        "no-restricted-syntax": 0
     }
 }
